--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 ]
             },
             {
-                day: 15, date: "06/02 (二)", fullDate: "2026-06-02", title: "抵達溫暖的家", weather: "舒適", image: "https://images.unsplash.com/photo-1526481280693-3bfa7568e0f3?q=80&w=800&auto=format&fit=crop",
+                day: 15, date: "06/02 (二)", fullDate: "2026-06-02", title: "抵達溫暖的家", weather: "舒適", image: "./images/15.jpg",
                 locations: [
                     { time: "06:10", name: "桃園機場", desc: "平安抵達", type: "transport", lat: 25.0797, lng: 121.2342 }
                 ]
@@ -764,4 +764,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
