--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         // --- 2. 德瑞 15 日行程資料 (2026年) [Revised] ---
         const tripData = [
             {
-                day: 1, date: "05/19 (二)", fullDate: "2026-05-19", title: "啟程：飛往法蘭克福", weather: "舒適", image: "https://images.unsplash.com/photo-1540962351504-03099e0a754b?q=80&w=800&auto=format&fit=crop",
+                day: 1, date: "05/19 (二)", fullDate: "2026-05-19", title: "啟程：飛往法蘭克福", weather: "舒適", image: "./images/1.jpg",
                 locations: [
                     { 
                         time: "22:20", name: "桃園機場 (TPE)", desc: "搭乘華航 CI061 直飛", type: "transport", lat: 25.0797, lng: 121.2342, 
@@ -158,7 +158,7 @@
                 ]
             },
             {
-                day: 2, date: "05/20 (三)", fullDate: "2026-05-20", title: "海德堡的浪漫詩篇", weather: "晴時多雲 18°C", image: "https://images.unsplash.com/photo-1596434494392-4d2c797435f3?q=80&w=800&auto=format&fit=crop",
+                day: 2, date: "05/20 (三)", fullDate: "2026-05-20", title: "海德堡的浪漫詩篇", weather: "晴時多雲 18°C", image: "./images/2.jpg",
                 locations: [
                     { 
                         time: "06:50", name: "法蘭克福機場", desc: "抵達德國", type: "transport", lat: 50.0379, lng: 8.5622, 
@@ -183,7 +183,7 @@
                 ]
             },
             {
-                day: 3, date: "05/21 (四)", fullDate: "2026-05-21", title: "童話科瑪與伯恩高地", weather: "多雲 16°C", image: "https://images.unsplash.com/photo-1596395811977-1a48695029e2?q=80&w=800&auto=format&fit=crop",
+                day: 3, date: "05/21 (四)", fullDate: "2026-05-21", title: "童話科瑪與伯恩高地", weather: "多雲 16°C", image: "./images/3.jpg",
                 locations: [
                     { 
                         time: "10:00", name: "科瑪 (Colmar)", desc: "霍爾的移動城堡原型", type: "spot", tags: ["打卡熱點"], 
@@ -203,7 +203,7 @@
                 ]
             },
             {
-                day: 4, date: "05/22 (五)", fullDate: "2026-05-22", title: "巔峰體驗：少女峰", weather: "雪/晴 -2°C", image: "https://images.unsplash.com/photo-1502786725219-58673f4df051?q=80&w=800&auto=format&fit=crop",
+                day: 4, date: "05/22 (五)", fullDate: "2026-05-22", title: "巔峰體驗：少女峰", weather: "雪/晴 -2°C", image: "./images/4.jpg",
                 locations: [
                     { 
                         time: "09:30", name: "艾格快線 (Eiger Express)", desc: "15分鐘直達冰川", type: "transport", tags: ["纜車"], lat: 46.6236, lng: 8.0268, 
@@ -223,7 +223,7 @@
                 ]
             },
             {
-                day: 5, date: "05/23 (六)", fullDate: "2026-05-23", title: "藍湖與黃金列車", weather: "晴朗 20°C", image: "https://images.unsplash.com/photo-1620054690382-7f2878d65839?q=80&w=800&auto=format&fit=crop",
+                day: 5, date: "05/23 (六)", fullDate: "2026-05-23", title: "藍湖與黃金列車", weather: "晴朗 20°C", image: "./images/5.jpg",
                 locations: [
                     { 
                         time: "09:30", name: "藍湖 (Blausee)", desc: "阿爾卑斯山的眼淚", type: "spot", tags: ["絕景"], 
@@ -243,7 +243,7 @@
                 ]
             },
             {
-                day: 6, date: "05/24 (日)", fullDate: "2026-05-24", title: "白朗峰與策馬特", weather: "晴 12°C", image: "https://images.unsplash.com/photo-1547623340-9a25b1f8b724?q=80&w=800&auto=format&fit=crop",
+                day: 6, date: "05/24 (日)", fullDate: "2026-05-24", title: "白朗峰與策馬特", weather: "晴 12°C", image: "./images/6.jpg",
                 locations: [
                     { 
                         time: "10:00", name: "南針峰 (Aiguille du Midi)", desc: "眺望白朗峰", type: "spot", tags: ["極限"], 
@@ -263,7 +263,7 @@
                 ]
             },
             {
-                day: 7, date: "05/25 (一)", fullDate: "2026-05-25", title: "王者風範：馬特洪峰", weather: "晴 10°C", image: "https://images.unsplash.com/photo-1534067783865-95033c042398?q=80&w=800&auto=format&fit=crop",
+                day: 7, date: "05/25 (一)", fullDate: "2026-05-25", title: "王者風範：馬特洪峰", weather: "晴 10°C", image: "./images/7.jpg",
                 locations: [
                     { 
                         time: "10:00", name: "葛納特觀景台 (Gornergrat)", desc: "全景視野", type: "spot", tags: ["必去"], 
@@ -283,7 +283,7 @@
                 ]
             },
             {
-                day: 8, date: "05/26 (二)", fullDate: "2026-05-26", title: "冰河列車與盧森", weather: "多雲 15°C", image: "https://images.unsplash.com/photo-1589115167090-67c2688029d2?q=80&w=800&auto=format&fit=crop",
+                day: 8, date: "05/26 (二)", fullDate: "2026-05-26", title: "冰河列車與盧森", weather: "多雲 15°C", image: "./images/8.jpg",
                 locations: [
                     { 
                         time: "08:52", name: "冰河列車 (Glacier Express)", desc: "世界最慢特快車", type: "transport", tags: ["必搭"], 
@@ -303,7 +303,7 @@
                 ]
             },
             {
-                day: 9, date: "05/27 (三)", fullDate: "2026-05-27", title: "懸崖餐廳與德國", weather: "晴 18°C", image: "https://images.unsplash.com/photo-1629235372333-333e4f719460?q=80&w=800&auto=format&fit=crop",
+                day: 9, date: "05/27 (三)", fullDate: "2026-05-27", title: "懸崖餐廳與德國", weather: "晴 18°C", image: "./images/9.jpg",
                 locations: [
                     { 
                         time: "09:00", name: "盧森晨喚", desc: "享受飯店設施", type: "relax", lat: 47.0545, lng: 8.3168, 
@@ -323,7 +323,7 @@
                 ]
             },
             {
-                day: 10, date: "05/28 (四)", fullDate: "2026-05-28", title: "童話國王的夢想", weather: "多雲 16°C", image: "https://images.unsplash.com/photo-1548667537-802526e03102?q=80&w=800&auto=format&fit=crop",
+                day: 10, date: "05/28 (四)", fullDate: "2026-05-28", title: "童話國王的夢想", weather: "多雲 16°C", image: "./images/10.jpg",
                 locations: [
                     { 
                         time: "10:00", name: "新天鵝堡", desc: "迪士尼城堡原型", type: "spot", tags: ["必去"], 
@@ -343,7 +343,7 @@
                 ]
             },
             {
-                day: 11, date: "05/29 (五)", fullDate: "2026-05-29", title: "國王湖的寧靜", weather: "晴 19°C", image: "https://images.unsplash.com/photo-1516968051689-53e32b8fa153?q=80&w=800&auto=format&fit=crop",
+                day: 11, date: "05/29 (五)", fullDate: "2026-05-29", title: "國王湖的寧靜", weather: "晴 19°C", image: "./images/11.jpg",
                 locations: [
                     { 
                         time: "11:00", name: "國王湖 (Königssee)", desc: "德國最美湖泊", type: "spot", tags: ["遊船"], 
@@ -363,7 +363,7 @@
                 ]
             },
             {
-                day: 12, date: "05/30 (六)", fullDate: "2026-05-30", title: "ICE 極速體驗", weather: "晴 22°C", image: "https://images.unsplash.com/photo-1542456534-7c9367323b6b?q=80&w=800&auto=format&fit=crop",
+                day: 12, date: "05/30 (六)", fullDate: "2026-05-30", title: "ICE 極速體驗", weather: "晴 22°C", image: "./images/12.jpg",
                 locations: [
                     { 
                         time: "10:00", name: "慕尼黑自由活動", desc: "最後購物機會", type: "shop", lat: 48.1372, lng: 11.5755, 
@@ -383,7 +383,7 @@
                 ]
             },
             {
-                day: 13, date: "05/31 (日)", fullDate: "2026-05-31", title: "羅曼蒂克大道終章", weather: "晴 20°C", image: "https://images.unsplash.com/photo-1563219504-d5669b764c5d?q=80&w=800&auto=format&fit=crop",
+                day: 13, date: "05/31 (日)", fullDate: "2026-05-31", title: "羅曼蒂克大道終章", weather: "晴 20°C", image: "./images/13.jpg",
                 locations: [
                     { 
                         time: "09:00", name: "羅騰堡古城", desc: "童話小鎮散策", type: "walk", lat: 49.3768, lng: 10.1793, 
@@ -403,7 +403,7 @@
                 ]
             },
             {
-                day: 14, date: "06/01 (一)", fullDate: "2026-06-01", title: "再見歐洲", weather: "晴", image: "https://images.unsplash.com/photo-1436491865332-7a61a109cc05?q=80&w=800&auto=format&fit=crop",
+                day: 14, date: "06/01 (一)", fullDate: "2026-06-01", title: "再見歐洲", weather: "晴", image: "./images/14.jpg",
                 locations: [
                     { 
                         time: "08:00", name: "法蘭克福機場 (FRA)", desc: "辦理退稅與登機", type: "transport", lat: 50.0379, lng: 8.5622, 
@@ -413,7 +413,7 @@
                 ]
             },
             {
-                day: 15, date: "06/02 (二)", fullDate: "2026-06-02", title: "抵達溫暖的家", weather: "舒適", image: "https://images.unsplash.com/photo-1512418490979-92798cec1380?q=80&w=800&auto=format&fit=crop",
+                day: 15, date: "06/02 (二)", fullDate: "2026-06-02", title: "抵達溫暖的家", weather: "舒適", image: "./images/15.jpg",
                 locations: [
                     { 
                         time: "06:10", name: "桃園機場", desc: "平安抵達", type: "transport", lat: 25.0797, lng: 121.2342, 
@@ -768,8 +768,8 @@
             };
             if(!isOpen) return null;
             return (
-                <div className="fixed inset-0 z-50 flex items-end justify-center bg-black/50 backdrop-blur-sm" onClick={onClose}>
-                    <div className="bg-white w-full p-6 rounded-t-3xl modal-enter" onClick={e=>e.stopPropagation()}>
+                <div className="fixed inset-0 z [-100] flex items-end justify-center bg-black/50 backdrop-blur-sm" onClick={onClose}>
+                    <div className="bg-white w-full p-6 pb-10 rounded-t-3xl modal-enter" onClick={e=>e.stopPropagation()}>
                         <h3 className="text-xl font-bold mb-4">新增 D{dayIndex} 景點</h3>
                         <input type="time" value={time} onChange={e=>setTime(e.target.value)} className="w-full bg-gray-100 p-3 rounded-xl mb-3 font-mono"/>
                         <input type="text" placeholder="景點名稱" value={name} onChange={e=>setName(e.target.value)} className="w-full bg-gray-100 p-3 rounded-xl mb-6" autoFocus/>
@@ -802,8 +802,8 @@
 
             if(!isOpen) return null;
             return (
-                <div className="fixed inset-0 z-50 flex items-end justify-center bg-black/50 backdrop-blur-sm" onClick={onClose}>
-                    <div className="bg-white w-full p-6 rounded-t-3xl modal-enter max-h-[80vh] overflow-y-auto" onClick={e=>e.stopPropagation()}>
+                <div className="fixed inset-0 z [-100] flex items-end justify-center bg-black/50 backdrop-blur-sm" onClick={onClose}>
+                    <div className="bg-white w-full p-6 pb-10 rounded-t-3xl modal-enter max-h-[80vh] overflow-y-auto" onClick={e=>e.stopPropagation()}>
                         <div className="flex justify-between items-center mb-4">
                             <h3 className="text-xl font-bold flex items-center gap-2"><Icon name="wallet"/> 記帳 (€)</h3>
                             <button onClick={onClose}><Icon name="x"/></button>
@@ -931,4 +931,5 @@
 </body>
 
 </html>
+
 
